<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.clients.altaBaixaClients">

    <Button
        android:id="@+id/button_alta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Alta usuari"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_New_Pswd" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="100dp"
        android:text="Esborra usuari"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toStartOf="@+id/guideline3" />

    <EditText
        android:id="@+id/editText_New_Pswd"
        android:layout_width="213dp"
        android:layout_height="41dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/textView_pswd"
        app:layout_constraintTop_toBottomOf="@+id/editText_New_Nick" />

    <EditText
        android:id="@+id/editText_New_Name"
        android:layout_width="195dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/textView_nom"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_modificacioUsuaris" />

    <EditText
        android:id="@+id/editText_New_Rol"
        android:layout_width="204dp"
        android:layout_height="38dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/textView_rol"
        app:layout_constraintTop_toBottomOf="@+id/editText_New_Name"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editText_New_Nick"
        android:layout_width="209dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/textView_nom_usuari"
        app:layout_constraintTop_toBottomOf="@+id/editText_New_Rol"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editText_userDelete"
        android:layout_width="191dp"
        android:layout_height="49dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="96dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView_User_delete"
        app:layout_constraintTop_toBottomOf="@+id/button_alta" />

    <TextView
        android:id="@+id/textView_nom_usuari"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="Nom d'usuari:"
        app:layout_constraintStart_toStartOf="@+id/textView_rol"
        app:layout_constraintTop_toBottomOf="@+id/textView_rol" />

    <TextView
        android:id="@+id/textView_pswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Contrasenya:"
        app:layout_constraintStart_toStartOf="@+id/textView_nom_usuari"
        app:layout_constraintTop_toBottomOf="@+id/textView_nom_usuari" />

    <TextView
        android:id="@+id/textView_nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="88dp"
        android:text="Nom:"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_modificacioUsuaris" />

    <TextView
        android:id="@+id/textView_rol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Rol:"
        app:layout_constraintStart_toStartOf="@+id/textView_nom"
        app:layout_constraintTop_toBottomOf="@+id/textView_nom" />

    <TextView
        android:id="@+id/textView_User_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="108dp"
        android:text="Nom d'usuari a esborrar:"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/button_alta" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_modificacioUsuaris"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Alta/Baixa Usuaris" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton_cl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:onClick="close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_close_24" />
</androidx.constraintlayout.widget.ConstraintLayout>