...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#E85555"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="90dp"
        android:background="@drawable/styles"
...
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextLogPsw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="90dp"
        android:background="@drawable/styles"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="180dp"
        android:onClick="viewsByUser"
...
